--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,14 +18,14 @@ import { features, productImages, mainServices, blogPosts } from "../data";
     class="flex flex-col h-screen p-4 bg-[url('/assets/header-bg.jpg')] bg-cover bg-center relative"
   >
     <div class="absolute inset-0 bg-slate-900/50 z-0" aria-hidden="true"></div>
-    <header class="isolate">
-      <Navbar />
+    <header class="isolate z-50 px-4 md:px-8">
+      <Navbar client:load />
     </header>
     <div
-      class="isolate flex-1 grid place-content-center text-white text-center"
+      class="relative flex-1 grid place-content-center text-white text-center"
     >
       <p class="text-xl uppercase">One page creative agency</p>
-      <h1 class="text-5xl font-bold max-w-[20ch] leading-normal">
+      <h1 class="text-3xl md:text-5xl font-bold max-w-[20ch] leading-normal">
         Brand strategy & digital design agency
       </h1>
     </div>
@@ -33,7 +33,7 @@ import { features, productImages, mainServices, blogPosts } from "../data";
   <!--end: Hero Section -->
   <!--start: About Section -->
   <section id="about">
-    <div class="grid grid-cols-2 bg-slate-100 pt-4 text-lg">
+    <div class="grid grid-cols-1 lg:grid-cols-2 bg-slate-100 pt-4 text-lg">
       <img
         src="/assets/about-left-img.jpg"
         class="h-full object-cover object-center"
@@ -57,7 +57,9 @@ import { features, productImages, mainServices, blogPosts } from "../data";
       </div>
     </div>
     <div class="bg-zinc-950 text-white">
-      <div class="w-[min(100%,92rem)] mx-auto px-8 flex gap-4 py-16">
+      <div
+        class="w-[min(100%,92rem)] mx-auto flex flex-col lg:flex-row gap-4 py-16 px-16 lg:px-8"
+      >
         {
           features.map((feature) => (
             <div class="space-y-3 text-center ">
@@ -86,8 +88,16 @@ import { features, productImages, mainServices, blogPosts } from "../data";
       sapiente quis facere harum labore? Quis expedita nesciunt, id esse commodi
       ipsa ut!
     </p>
-    <dir class="grid grid-cols-3 py-8">
-      {productImages.map((image) => <img src={`/assets/${image}`} alt="" />)}
+    <dir class="grid grid-cols-2 lg:grid-cols-3 py-8 px-4">
+      {
+        productImages.map((image) => (
+          <img
+            class="[&:nth-child(3n-2)]:col-span-2 lg:[&:nth-child(3n-2)]:col-span-1"
+            src={`/assets/${image}`}
+            alt=""
+          />
+        ))
+      }
     </dir>
   </section>
   <!--end: Works Section -->
@@ -102,7 +112,7 @@ import { features, productImages, mainServices, blogPosts } from "../data";
       </p>
     </div>
     <div
-      class="wrapper-wide grid grid-cols-2 place-items-center gap-12 py-8 text-start"
+      class="wrapper-wide grid grid-cols-1 md:grid-cols-2 place-items-center gap-12 py-8 px-8 md:px-4 text-start"
     >
       {
         mainServices.map((service) => (
@@ -131,7 +141,9 @@ import { features, productImages, mainServices, blogPosts } from "../data";
         commodi ipsa ut!
       </p>
     </div>
-    <div class="wrapper-wide py-24 grid grid-cols-3 gap-8">
+    <div
+      class="wrapper-wide mx-auto py-24 px-12 md:px-4 grid grid-cols-1 md:grid-cols-3 gap-8"
+    >
       {
         blogPosts.map((post) => (
           <div class="grid gap-4 font-bold">
@@ -149,7 +161,9 @@ import { features, productImages, mainServices, blogPosts } from "../data";
   <!--end: Blog section -->
   <!--start: contact section -->
   <section id="contact" class="bg-zinc-200">
-    <div class="wrapper-wide grid grid-cols-2 gap-16 py-24">
+    <div
+      class="wrapper-wide grid grid-cols-1 md:grid-cols-2 gap-16 py-24 px-8 md:px-0"
+    >
       <div class="space-y-4 text-slate-950/75">
         <h2 class="text-4xl text-slate-950 font-bold">Contact Us</h2>
         <p class="max-w-[48ch]">
@@ -225,7 +239,7 @@ import { features, productImages, mainServices, blogPosts } from "../data";
             class="w-full px-5 py-4 min-h-[120px] placeholder:text-slate-950 placeholder:text-sm resize-none"
           ></textarea>
         </label>
-        <div>
+        <div class="grid col-span-2 md:block md:col-span-1">
           <Button content="Send Message" />
         </div>
       </form>
