--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import { features, productImages, mainServices, blogPosts } from "../data";
   >
     <div class="absolute inset-0 bg-slate-900/50 z-0" aria-hidden="true"></div>
     <header class="isolate z-50 px-4 md:px-8">
-      <Navbar client:load />
+      <Navbar />
     </header>
     <div
       class="relative flex-1 grid place-content-center text-white text-center"
