--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -162,7 +162,7 @@ import { features, productImages, mainServices, blogPosts } from "../data";
   <!--start: contact section -->
   <section id="contact" class="bg-zinc-200">
     <div
-      class="wrapper-wide grid grid-cols-1 md:grid-cols-2 gap-16 py-24 px-8 md:px-0"
+      class="wrapper-wide grid grid-cols-1 md:grid-cols-2 gap-16 py-24 px-8 md:px-4"
     >
       <div class="space-y-4 text-slate-950/75">
         <h2 class="text-4xl text-slate-950 font-bold">Contact Us</h2>
@@ -239,7 +239,7 @@ import { features, productImages, mainServices, blogPosts } from "../data";
             class="w-full px-5 py-4 min-h-[120px] placeholder:text-slate-950 placeholder:text-sm resize-none"
           ></textarea>
         </label>
-        <div class="grid col-span-2 md:block md:col-span-1">
+        <div class="grid col-span-2 lg:block lg:col-span-1">
           <Button content="Send Message" />
         </div>
       </form>
