--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -92,7 +92,7 @@ import { features, productImages, mainServices, blogPosts } from "../data";
       {
         productImages.map((image) => (
           <img
-            class="[&:nth-child(3n-2)]:col-span-2 lg:[&:nth-child(3n-2)]:col-span-1"
+            class="object-cover object-center [&:nth-child(3n-2)]:col-span-2 [&:nth-child(3n-2)]:aspect-[4/3] lg:[&:nth-child(3n-2)]:col-span-1 lg:[&:nth-child(3n-2)]:aspect-auto"
             src={`/assets/${image}`}
             alt=""
           />
