--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -6,6 +6,8 @@ export interface Props {
 const { content } = Astro.props;
 ---
 
-<button class="text-white bg-gradient-to-r from-pink-600 to-red-500 px-12 py-3">
-  { content }
+<button
+  class="text-white bg-gradient-to-r from-pink-600 to-red-500 px-12 py-3 hover:-translate-y-2 hover:scale-[1.02] transition-transform duration-300"
+>
+  {content}
 </button>
