--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -3,11 +3,11 @@ import Icon from "astro-icon";
 ---
 
 <nav
-  class="relative group flex justify-between text-white [&_li:hover]:text-pink-600"
+  class="relative group flex justify-between text-white [&_li:not(:last-child):hover]:text-pink-600"
 >
   <a href="/" class="text-2xl font-bold">Oxster.</a>
   <ul
-    class="flex flex-col md:flex-row w-full md:w-auto items-center py-4 md:py-0 gap-4 font-thin absolute min-h-fit bg-slate-200 md:bg-transparent text-slate-950 md:text-current top-[140%] md:static md:min-h-auto rounded-xl menu"
+    class="flex flex-col md:flex-row w-full md:w-auto items-center py-4 md:py-0 gap-4 md:font-thin absolute min-h-fit bg-slate-200 md:bg-transparent text-slate-950 md:text-current top-[140%] md:static md:min-h-auto rounded-xl menu"
     id="navMenu"
   >
     <li><a href="#home">Home</a></li>
@@ -39,8 +39,16 @@ import Icon from "astro-icon";
     </li>
     <li class="md:hidden">
       <button onclick="toggleMenu()">
-        <Icon name="menu" size={28} class="group-[:has([aria-expanded='true'])]:hidden" />
-        <Icon name="close" size={28} class="hidden group-[:has([aria-expanded='true'])]:block" />
+        <Icon
+          name="menu"
+          size={28}
+          class="group-[:has([aria-expanded='true'])]:hidden hover:text-red-500"
+        />
+        <Icon
+          name="close"
+          size={28}
+          class="hidden group-[:has([aria-expanded='true'])]:block text-red-500"
+        />
         <span class="sr-only">Open menu</span>
       </button>
     </li>
@@ -48,9 +56,13 @@ import Icon from "astro-icon";
 </nav>
 
 <script lang="js">
-  const toggleMenu = () => {
-    document.getElementById("navMenu").getAttribute("aria-expanded") === "true"
-      ? document.getElementById("navMenu").setAttribute("aria-expanded", "false")
-      : document.getElementById("navMenu").setAttribute("aria-expanded", "true");
-  };
+const toggleMenu = () => {
+  document.getElementById("navMenu").getAttribute("aria-expanded") === "true"
+    ? document
+      .getElementById("navMenu")
+      .setAttribute("aria-expanded", "false")
+    : document
+      .getElementById("navMenu")
+      .setAttribute("aria-expanded", "true");
+};
 </script>
