--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -24,6 +24,52 @@
       transform: scaleY(1);
     }
   }
+
+  .notification-box {
+    position: fixed;
+    bottom: 2rem;
+    right: 0;
+    width: 22rem;
+    height: 20rem;
+    padding-inline-end: 2rem;
+    display: grid;
+    align-content: end;
+    gap: 1rem;
+    overflow: hidden;
+    pointer-events: none;
+  }
+
+  .notification {
+    padding: 0.5rem 1.5rem;
+    font-weight: bold;
+    border-radius: 0.5rem;
+    opacity: 0;
+    translate: 1rem 0;
+    animation: fade-in-out 3s ease;
+    transition: all 350ms linear;
+  }
+
+  .notification:where(.success) {
+    background: theme(colors.emerald.600);
+    color: theme(colors.emerald.100);
+  }
+
+  .notification:where(.failed) {
+    background: theme(colors.rose.600);
+    color: theme(colors.rose.100);
+  }
+
+  @keyframes fade-in-out {
+    10%,
+    90% {
+      opacity: 1;
+      translate: 0 0;
+    }
+    100% {
+      opacity: 0;
+      translate: 0 0;
+    }
+  }
 }
 
 @layer utilities {
